--- a/mainapp/templates/mainapp/product-details.html
+++ b/mainapp/templates/mainapp/product-details.html
@@ -10,34 +10,34 @@
     {% include 'mainapp/includes/inc_products_nav.html' %}
     <section class="product-page padding-site">
         <article class="product-slider">
-            <a href="/media/{{ detailed_product.image|default:'products_images/default.svg' }}" target="_blank">
-                <div class="product-img" style="background-image: url(/media/{{ detailed_product.image|default:'products_images/default.svg' }})"></div>
+            <a href="/media/{{ product.image|default:'products_images/default.svg' }}" target="_blank">
+                <div class="product-img" style="background-image: url(/media/{{ product.image|default:'products_images/default.svg' }})"></div>
             </a>
             <div class="product-mini-img-box">
-                <a href="/media/{{ detailed_product.image|default:'products_images/default.svg' }}" target="_blank">
-                    <div class="product-mini-img" style="background-image: url(/media/{{ detailed_product.image|default:'products_images/default.svg' }})"></div>
+                <a href="/media/{{ product.image|default:'products_images/default.svg' }}" target="_blank">
+                    <div class="product-mini-img" style="background-image: url(/media/{{ product.image|default:'products_images/default.svg' }})"></div>
                 </a>
-                <a href="/media/{{ detailed_product.image|default:'products_images/default.svg' }}" target="_blank">
-                    <div class="product-mini-img" style="background-image: url(/media/{{ detailed_product.image|default:'products_images/default.svg' }})"></div>
+                <a href="/media/{{ product.image|default:'products_images/default.svg' }}" target="_blank">
+                    <div class="product-mini-img" style="background-image: url(/media/{{ product.image|default:'products_images/default.svg' }})"></div>
                 </a>
-                <a href="/media/{{ detailed_product.image|default:'products_images/default.svg' }}" target="_blank">
-                    <div class="product-mini-img" style="background-image: url(/media/{{ detailed_product.image|default:'products_images/default.svg' }})"></div>
+                <a href="/media/{{ product.image|default:'products_images/default.svg' }}" target="_blank">
+                    <div class="product-mini-img" style="background-image: url(/media/{{ product.image|default:'products_images/default.svg' }})"></div>
                 </a>
             </div>
         </article>
         <article class="product-description">
-            <h2 class="product-name">{{ detailed_product.name }}</h2>
+            <h2 class="product-name">{{ product.name }}</h2>
 {#            <h3 class="product-second-name">Hot Deal</h3>#}
             <div class="product-price">
                 <p class="price-currency">$ </p>
-                <p class="price-num">{{ detailed_product.price }}</p>
+                <p class="price-num">{{ product.price }}</p>
                 <p class="price-value">/sq</p>
             </div>
-            <a href="{% url 'basket:add' detailed_product.pk %}" class="product-button">
+            <a href="{% url 'basket:add' product.pk %}" class="product-button">
                 order&nbsp;us <img class="product-button-arrow" src="{% static 'img/arrow-product.svg' %}" alt="arrow">
             </a>
             <div class="product-details">
-                <p class="paragraph">{{ detailed_product.description }}</p>
+                <p class="paragraph">{{ product.description }}</p>
                 <!--
                 <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do&nbsp;eiusmod tempor incididunt ut&nbsp;labore</p>
                 <p class="paragraph"> et&nbsp;dolore magna aliqua. Ut&nbsp;enim ad&nbsp;minim veniam, quis nostrud exercitation ullamco laboris nisi ut&nbsp;aliquip ex&nbsp;ea&nbsp;commodo consequat.</p>
