--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -19,6 +19,7 @@
     {% block js %}
         <script src="{% static 'js/jquery-3.4.0.min.js' %}"></script>
         <script src="{% static 'js/basket_scripts.js' %}"></script>
+        <script src="{% static 'js/main_scripts.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
     {% endblock %}
 </head>
