--- a/mainapp/templates/mainapp/includes/inc_products_nav.html
+++ b/mainapp/templates/mainapp/includes/inc_products_nav.html
@@ -1,4 +1,4 @@
-{% if request.resolver_match.url_name in 'products, catalog, category, page' %}
+{% if request.resolver_match.url_name in 'products, catalog, category, page, products_ajax, catalog_ajax, category_ajax, page_ajax' %}
 
     <ul class="products-nav">
         <li class="products-nav-list">
@@ -31,6 +31,7 @@
             </li>
 
         {% endfor %}
+
     </ul>
 
 {% endif %}
