--- a/ordersapp/templates/ordersapp/order_form.html
+++ b/ordersapp/templates/ordersapp/order_form.html
@@ -1,5 +1,6 @@
 {% extends "ordersapp/base.html" %}
 {% load static %}
+{% load cache %}
 
 {% block container %}
     {% include 'ordersapp/includes/inc__order_summary.html' %}
@@ -31,7 +32,13 @@
                                 {% endif %}
                                 {{ field.errors.as_ul }}
                                 {% if field.name != 'price' %}
-                                    {{ field }}
+                                    {% if field.name == 'product' %}
+                                        {% cache 3600 orderitemform_product field.value %}
+                                            {{ field }}
+                                        {% endcache %}
+                                    {% else %}
+                                        {{ field }}
+                                    {% endif %}
                                 {% else %}
                                     {% if field.value %}
                                         <div class="orderitems-{{ forloop.parentloop.counter0 }}-price">
