Выполнил задания Django-2 Урок 8

--- a/basketapp/templates/basketapp/basket.html
+++ b/basketapp/templates/basketapp/basket.html
@@ -13,7 +13,7 @@
                 <div class="basket-header">
                     <div class="basket-body-name">
                         <img class="basket-bag" src="{% static 'img/bag.svg' %}" alt="bag">
-                        <h3 class="basket-body-name-h3"></h3>Shopping Cart&nbsp;
+                        <h3 class="basket-body-name-h3"></h3>Shopping Cart
 
                         {% if request.user.first_name %}
                             ({{ request.user.first_name|truncatechars_html:15|title }})
