--- a/ordersapp/templates/ordersapp/order_form.html
+++ b/ordersapp/templates/ordersapp/order_form.html
@@ -32,13 +32,14 @@
                                 {% endif %}
                                 {{ field.errors.as_ul }}
                                 {% if field.name != 'price' %}
-                                    {% if field.name == 'product' %}
-                                        {% cache 3600 orderitemform_product field.value %}
-                                            {{ field }}
-                                        {% endcache %}
-                                    {% else %}
-                                        {{ field }}
-                                    {% endif %}
+                                    {{ field }}
+{#                                    {% if field.name == 'product' %}#}
+{#                                        {% cache 3600 orderitemform_product field.value %}#}
+{#                                            {{ field }}#}
+{#                                        {% endcache %}#}
+{#                                    {% else %}#}
+{#                                        {{ field }}#}
+{#                                    {% endif %}#}
                                 {% else %}
                                     {% if field.value %}
                                         <div class="orderitems-{{ forloop.parentloop.counter0 }}-price">
